code/examples/stderr/misc_4.stderr
error[E0433]: failed to resolve: use of undeclared type `HashMap`
 --> examples/misc_4.rs:2:15
  |
2 |     let map = HashMap::new();
  |               ^^^^^^^ use of undeclared type `HashMap`
  |
help: consider importing this struct
  |
1 + use std::collections::HashMap;
  |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `code` (example "misc_4") due to 1 previous error
